src/objects/Center_Open_Quarter__c.object
<CustomObject>
    <description>A record of which quarter has been built out for open days in the system</description>
    <fields>
        <fullName>Calendar_Quarter__c</fullName>
        <description>The calendar quarter this record ties to</description>
        <label>Calendar Quarter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Center the record is related to</description>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Center Open Quarters</relationshipLabel>
        <relationshipName>Center_Open_Quarters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Center_Year__c</fullName>
        <description>the calendar year the build out corresponds to</description>
        <label>Center Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the person who marked the qtr as built out</description>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Center_Open_Quarters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Time__c</fullName>
        <description>When the qtr was marked as complete</description>
        <label>Closed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Denied_Reason__c</fullName>
        <description>Reason a build out was denied</description>
        <label>Denied Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the person who approved the qtr closing</description>
        <label>Handled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Center_Open_Quarters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handled_Time__c</fullName>
        <description>When approval or denial was flagged by the foa</description>
        <label>Handled Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Open_Status__c</fullName>
        <description>Indicates the current build status of this record</description>
        <label>Open Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Build Out</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Center Open Quarter</label>
    <nameField>
        <displayFormat>CQTR-{0000}</displayFormat>
        <label>Center Open QTR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Center Open Quarters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>